--- a/Form/Form2.html
+++ b/Form/Form2.html
@@ -8,9 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulaire Ansible</title>
     <!-- Bootstrap -->
-    <link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="scripts/components/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="../bootstrap/css/starter-template.css" rel="stylesheet">
+    <link href="scripts/components/bootstrap/css/starter-template.css" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -18,9 +18,9 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <meta http-equiv="content-style-type" content="text/css">
-    <link rel="stylesheet" href="layout.css" type="text/css"/>
+    <link rel="stylesheet" href="css/layout.css" type="text/css"/>
     <script type='text/javascript' src='https://webcom.orange.com/js/latest/webcom.js'></script>
-    <script language="JavaScript" src="SessionIdWebcom.js" type="text/javascript"></script>
+    <script language="JavaScript" src="scripts/SessionIdWebcom.js" type="text/javascript"></script>
 </head>
 <body>
 <div class="container">
@@ -70,7 +70,7 @@
             <div class="row">
                 <div class="col-lg-12">&nbsp</div>
                 <div class="col-lg-12">
-                    <button id="btnSignIn" class="btn btn-block btn-primary col-lg-5 col-xs-9" type="submit">
+                    <button id="btnSignIn" class="btn btn-block btn-primary col-lg-5 col-xs-9" type="submit" onclick="myfunction()">
                         <span>sign in</span>
                     </button>
                 </div>
@@ -94,8 +94,13 @@
     <div id="loader"></div>
     <div id="content">
         <script id="template" type="x-tmpl-mustache">
-  <p>Use the <strong>{{power}}</strong>, {{name}}!</p>
+            <p>Use the <strong>{{power}}</strong>, {{name}}!</p>
+              <form id="utilisateur" method="post">
+               <label for="qui es-tu">coucou</label></br>
+                        <input type="email" id="login" name="login" placeholder="email address">
+                        </form>
 </script>
+
 
     </div>
 
@@ -105,9 +110,12 @@
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="../bootstrap/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="mustache.js"></script>
-<script type="text/javascript" src="apps.js"></script>
+<script src="scripts/components/bootstrap/js/bootstrap.min.js"></script>
+<!-- data-main attribute tells require.js to load
+      scripts/main.js after require.js loads.
+<script data-main="scripts/main" src="scripts/components/requirejs/require.js"></script> -->
+<script type="text/javascript" src="scripts/components/mustache/mustache.js"></script>
+<script type="text/javascript" src="scripts/apps.js"></script>
 
 </body>
 </html>
