--- a/Form/SS-Form.html
+++ b/Form/SS-Form.html
@@ -3,6 +3,9 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
+    <script>
+        require(['scripts/page1']);
+    </script>
 </head>
 <body>
 <h1>le titre</h1>
