--- a/Form/Form2.html
+++ b/Form/Form2.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulaire Ansible</title>
+    <title>Formulaire Ansible 2</title>
     <!-- Bootstrap -->
     <link href="scripts/components/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
@@ -18,9 +18,13 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <meta http-equiv="content-style-type" content="text/css">
+    <!--My personnal css -->
     <link rel="stylesheet" href="css/layout.css" type="text/css"/>
+    <!--api webcom -->
     <script type='text/javascript' src='https://webcom.orange.com/js/latest/webcom.js'></script>
+    <!-- My personnal js -->
     <script language="JavaScript" src="scripts/SessionIdWebcom.js" type="text/javascript"></script>
+    <!-- mustache js-->
     <script src="scripts/components/requirejs/require.js" data-main="scripts/main"></script>
 </head>
 <body>
@@ -94,6 +98,7 @@
     </div>
     <div id="loader"></div>
     <div id="content">
+
         <!-- <script>require(['apps']);</script>
             <script id="template" type="x-tmpl-mustache">
                   <p>Use the <strong>{{power}}</strong>, {{name}}!</p>
@@ -121,7 +126,7 @@
       scripts/main.js after require.js loads.-->
 
 <script type="text/javascript" src="scripts/components/mustache/mustache.js"></script>
-<!--<script type="text/javascript" src="scripts/apps.js"></script>-->
+<!--<script type="text/javascript" src="scripts/apps2.js"></script>-->
 
 </body>
 </html>
