--- a/Form/Form2.html
+++ b/Form/Form2.html
@@ -22,9 +22,9 @@
     <link rel="stylesheet" href="css/layout.css" type="text/css"/>
     <!--api webcom -->
     <script type='text/javascript' src='https://webcom.orange.com/js/latest/webcom.js'></script>
-    <!-- My personnal js -->
+    <!-- My personal js -->
     <script language="JavaScript" src="scripts/SessionIdWebcom.js" type="text/javascript"></script>
-    <!-- mustache js-->
+    <!-- require js-->
     <script src="scripts/components/requirejs/require.js" data-main="scripts/main"></script>
 </head>
 <body>
