--- a/Form/scripts/SSForm.html
+++ b/Form/scripts/SSForm.html
@@ -1,50 +1,49 @@
 <!-- BEGIN: template. -->
+<div id="SSForm" style="display: none">
 <h1>list directory contents</h1>
-<div class="control-group">
+<div class="control-group" >
     <p class="pull-left">Options :</p></br>
-    <div class="row">
-        <div class="col-lg-offset-3 col-xs-offset-1 col-lg-5 col-xs-9 controls span2">
-        <label class="checkbox">
-            <input type="checkbox" value="option1" id="inlineCheckbox1"> a
+    <div id="toto">
+    <div class="col-lg-offset-2 col-lg-3 col-xs-11 controls span2">
+         <label class="checkbox">
+            <input type='checkbox' value="a" id="inlineCheckbox01"> a
         </label>
         <label class="checkbox">
-            <input type="checkbox" value="option2" id="inlineCheckbox2"> A
+            <input type="checkbox" value="A" id="inlineCheckbox02"> A
         </label>
         <label class="checkbox">
-            <input type="checkbox" value="option3" id="inlineCheckbox3"> l
+            <input type="checkbox" value="l" id="inlineCheckbox03"> l
         </label>
         <label class="checkbox">
-            <input type="checkbox" value="option3" id="inlineCheckbox3"> b
+            <input type="checkbox" value="b" id="inlineCheckbox04"> b
         </label>
-        </div>
     </div>
-    <div class="row">
-        <div class="col-lg-offset-3 col-xs-offset-1 col-lg-5 col-xs-9 col-lg-12 controls span2">
+    <div class="col-lg-3 col-xs-11 controls span2">
         <label class="checkbox">
-            <input type="checkbox" value="option1" id="inlineCheckbox1"> c
+            <input type="checkbox" value="c" id="inlineCheckbox05"> c
         </label>
         <label class="checkbox">
-            <input type="checkbox" value="option2" id="inlineCheckbox2"> D
+            <input type="checkbox" value="D" id="inlineCheckbox06"> D
         </label>
         <label class="checkbox">
-            <input type="checkbox" value="option3" id="inlineCheckbox3"> f
+            <input type="checkbox" value="f" id="inlineCheckbox07"> f
         </label>
         <label class="checkbox">
-            <input type="checkbox" value="option3" id="inlineCheckbox3"> h
+            <input type="checkbox" value="h" id="inlineCheckbox08"> h
         </label>
-        </div>
     </div>
-    <div class="col-lg-offset-3 col-xs-offset-1 col-lg-5 col-xs-9 controls span2">
+    <div class="col-lg-3 col-xs-11 controls span2">
         <label class="checkbox">
-            <input type="checkbox" value="option1" id="inlineCheckbox1"> r
+            <input type="checkbox" value="r" id="inlineCheckbox09"> r
         </label>
         <label class="checkbox">
-            <input type="checkbox" value="option2" id="inlineCheckbox2"> s
+            <input type="checkbox" value="s" id="inlineCheckbox10"> s
         </label>
         <label class="checkbox">
-            <input type="checkbox" value="option3" id="inlineCheckbox3"> t
+            <input type="checkbox" value="t" id="inlineCheckbox11"> t
         </label>
-
     </div>
+    </div>
+</div>
 </div>
 <!-- END: Template. -->
