--- a/Form/scripts/SSForm.html
+++ b/Form/scripts/SSForm.html
@@ -4,7 +4,7 @@
 <div class="control-group" >
     <p class="pull-left">Options :</p></br>
     <div id="toto">
-    <div class="col-lg-offset-2 col-lg-3 col-xs-11 controls span2">
+    <div class="col-lg-offset-1 col-lg-3 col-xs-11 controls span2">
          <label class="checkbox">
             <input type='checkbox' value="a" id="inlineCheckbox01"> a
         </label>
@@ -42,7 +42,8 @@
         <label class="checkbox">
             <input type="checkbox" value="t" id="inlineCheckbox11"> t
         </label>
-    </div>
+    </div class="col-lg-1 col-xs-11 controls span2">
+        <button type="button" id="ValideChose" name="ValideChose">Valider</button>
     </div>
 </div>
 </div>
