--- a/Form/scripts/SSForm.html
+++ b/Form/scripts/SSForm.html
@@ -1,46 +1,50 @@
 <!-- BEGIN: template. -->
-    <div id="toto">
-    <div class="col-lg-offset-1 col-lg-3 col-xs-11 controls span2">
-         <label class="checkbox">
-            <input type='checkbox' value="a" id="inlineCheckbox01"> a
-        </label>
-        <label class="checkbox">
-            <input type="checkbox" value="A" id="inlineCheckbox02"> A
-        </label>
-        <label class="checkbox">
-            <input type="checkbox" value="l" id="inlineCheckbox03"> l
-        </label>
-        <label class="checkbox">
-            <input type="checkbox" value="b" id="inlineCheckbox04"> b
-        </label>
+<div id="SSForm" style="display:none">
+    <h1>list directory contents</h1>
+    <div class="control-group" >
+        <p class="pull-left">Options :</p></br>
+        <div id="toto">
+            <div class="col-lg-offset-1 col-lg-3 col-xs-11 controls span2">
+                <label class="checkbox">
+                    <input type='checkbox' value="a" id="inlineCheckbox01"> a
+                </label>
+                <label class="checkbox">
+                    <input type="checkbox" value="A" id="inlineCheckbox02"> A
+                </label>
+                <label class="checkbox">
+                    <input type="checkbox" value="l" id="inlineCheckbox03"> l
+                </label>
+                <label class="checkbox">
+                    <input type="checkbox" value="b" id="inlineCheckbox04"> b
+                </label>
+            </div>
+            <div class="col-lg-3 col-xs-11 controls span2">
+                <label class="checkbox">
+                    <input type="checkbox" value="c" id="inlineCheckbox05"> c
+                </label>
+                <label class="checkbox">
+                    <input type="checkbox" value="D" id="inlineCheckbox06"> D
+                </label>
+                <label class="checkbox">
+                    <input type="checkbox" value="f" id="inlineCheckbox07"> f
+                </label>
+                <label class="checkbox">
+                    <input type="checkbox" value="h" id="inlineCheckbox08"> h
+                </label>
+            </div>
+            <div class="col-lg-3 col-xs-11 controls span2">
+                <label class="checkbox">
+                    <input type="checkbox" value="r" id="inlineCheckbox09"> r
+                </label>
+                <label class="checkbox">
+                    <input type="checkbox" value="s" id="inlineCheckbox10"> s
+                </label>
+                <label class="checkbox">
+                    <input type="checkbox" value="t" id="inlineCheckbox11"> t
+                </label>
+            </div class="col-lg-1 col-xs-11 controls span2">
+            <button type="button" id="ValideChose" name="ValideChose">Valider</button>
+        </div>
     </div>
-    <div class="col-lg-3 col-xs-11 controls span2">
-        <label class="checkbox">
-            <input type="checkbox" value="c" id="inlineCheckbox05"> c
-        </label>
-        <label class="checkbox">
-            <input type="checkbox" value="D" id="inlineCheckbox06"> D
-        </label>
-        <label class="checkbox">
-            <input type="checkbox" value="f" id="inlineCheckbox07"> f
-        </label>
-        <label class="checkbox">
-            <input type="checkbox" value="h" id="inlineCheckbox08"> h
-        </label>
-    </div>
-    <div class="col-lg-3 col-xs-11 controls span2">
-        <label class="checkbox">
-            <input type="checkbox" value="r" id="inlineCheckbox09"> r
-        </label>
-        <label class="checkbox">
-            <input type="checkbox" value="s" id="inlineCheckbox10"> s
-        </label>
-        <label class="checkbox">
-            <input type="checkbox" value="t" id="inlineCheckbox11"> t
-        </label>
-    </div class="col-lg-1 col-xs-11 controls span2">
-        <button type="button" id="ValideChose" name="ValideChose">Valider</button>
-    </div>
-</div>
 </div>
 <!-- END: Template. -->
