--- a/Form/apilivebox.html
+++ b/Form/apilivebox.html
@@ -16,7 +16,7 @@
             var xhr_object = null;
 
             //Construction du body de la requete
-
+            xhr_object = new XMLHttpRequest();
             xhr_object.open("POST", "http//192.168.1.1/sysbus/NMC:getWANStatus", false);
             xhr_object.setRequestHeader("Content-Type", "application/json");
             bienvenue.innerHTML += xhr_object.responseText;
