--- a/Form/apilivebox.html
+++ b/Form/apilivebox.html
@@ -14,11 +14,13 @@
 
         function check() {
             var xhr_object = null;
+            var obj = '{"parameters": {}}';
 
             //Construction du body de la requete
             xhr_object = new XMLHttpRequest();
-            xhr_object.open("POST", "http//192.168.1.1/sysbus/NMC:getWANStatus", false);
+            xhr_object.open("POST", "http://192.168.1.1/sysbus/NMC:getWANStatus", false);
             xhr_object.setRequestHeader("Content-Type", "application/json");
+            //xhr_object.send(obj);
             bienvenue.innerHTML += xhr_object.responseText;
         }
     </script>
